<resources>
    <string name="app_name">Business Card</string>
    <string name="title_home">Home</string>
    <string name="press_nfc">Press to share your Business Card</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_card">My cards</string>
    <string name="title_contact">Repertory</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company_name">Company</string>
    <string name="job_position">Job Position</string>
    <string name="company_address">Company address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="no_card_available">Empty card repertory</string>
    <string name="wallet">Wallet</string>
    <string name="share">Share</string>
    <string name="no_contact">No contact registered</string>

</resources>