<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.burgowzer.businesscard.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" >
        <action
            android:id="@+id/action_navigation_cards_to_cardCreationFragment"
            app:destination="@id/cardCreationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.burgowzer.businesscard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.burgowzer.businesscard.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/cardCreationFragment"
        android:name="com.burgowzer.businesscard.ui.card.CardCreationFragment"
        android:label="CardCreationFragment" >
        <action
            android:id="@+id/action_cardCreationFragment_to_navigation_cards"
            app:destination="@id/navigation_cards" />
    </fragment>
</navigation>